Fix Extractor overflow bug

--- a/portiaui/app/styles/components/dropdown-menu.scss
+++ b/portiaui/app/styles/components/dropdown-menu.scss
@@ -1,6 +1,8 @@
 .dropdown-menu {
     outline: 0;
     margin: 2px 0;
+    max-height: 200px;
+    overflow-y: scroll;
 
     > .focused:not(.active)
     > a {
